--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -96,6 +96,9 @@
 
           <br>
           <p>{{story.description}}</p>
+          <button class="btn me-1" style="color: white;background-color:orange;"[routerLink]="['/editBacklog',story.id]">
+            <i class="bi bi-pencil">EDIT</i>
+          </button>
         </div>
 
       </div>
