--- a/src/app/pages/djagora-academy/scrum/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/edit-sprint/edit-sprint.component.html
@@ -43,11 +43,11 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
               <div class="row justify-content-center">
                 <div class="col-md-4 mb-4 mx-4">
                   <label for="validationServer04">Start date</label>
-                  <input   type="date" class="form-control p-1" id="validationServer04" formControlName="start_date" [ngModel]="sprint.start_date| date:'MM-dd-yyyy'" required>
+                  <input   type="date" class="form-control p-1" id="validationServer04" formControlName="start_date" [ngModel]="sprint.startDate" required>
                 </div>
                 <div class="col-md-4 mb-4 mx-4">
                   <label for="validationServer03">End date</label>
-                  <input type="date"  class="form-control p-3" formControlName="end_date" [ngModel]="sprint.end_date | date:'yyyy-MM-dd'"
+                  <input type="date"  class="form-control p-3" formControlName="end_date" [ngModel]="sprint.endDate"
                     placeholder="Nombre de stagaires..." required>
                 </div>
               </div>
