--- a/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <div class="btn_retour mb-3">
-        <button [routerLink]='["/backlog",userStory.project_id]'><a>🢀 Back</a></button>
+        <button [routerLink]='["/backlog",projID]'><a>🢀 Back</a></button>
     </div>
     <div class=" ">
       <form  [formGroup]="userStoryForm">
