--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="banner-heading">
-            <h1 class="banner-title">Backlog</h1>
+            <h1 class="banner-title">{{SingleProject.title}}/Backlog</h1>
           </div>
         </div><!-- Col end -->
       </div><!-- Row end -->
@@ -30,8 +30,9 @@
   <div class="container">
 
     <div class="row">
-
-      <button [routerLink]='["/sprint",id]' class="btn ml-3  col-md-auto  "
+      <button [routerLink]='["/SingleProject",id]' class="btn ml-3  col-md-auto btn_retour "
+      >🢀 Back</button>
+      <button [routerLink]='["/sprint",id]' class="btn mx-3  col-md-auto  "
         style="color: white;background-color:#0081c2;">Sprints</button>
       <span *ngIf="scrumMaster!=null" class="badge  badge-dark col-md-auto ml-1"   >
         <div class="row ">
@@ -46,7 +47,7 @@
 
       </span>
 
-      <button class="btn mx-1  col-md-auto w-20 " id="myBtn" onclick="popup()"
+      <button *ngIf="SingleProject.user_id==loggeduser['id']"   class="btn mx-1  col-md-auto w-20 " id="myBtn" onclick="popup()"
         style="color: white;background-color: #0081c2;">+</button>
 
     </div>
@@ -103,7 +104,7 @@
           <h4 style="color: #0081c2;">{{story.name}}</h4>
           <span> | {{story.estimated_date}} | </span>
           <span class="badge badge-danger " *ngIf="story.priority<3" style="color: white;">Critical</span>
-          <span class="badge badge-warning" *ngIf="story.priority>3 && story.priority<6"
+          <span class="badge badge-warning" *ngIf="story.priority>=3 && story.priority<=6"
             style="color: white;">Medium</span>
           <span class="badge badge-info" *ngIf="story.priority>6" style="color: white;">Easy</span>
 
@@ -117,7 +118,7 @@
       </div>
       <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
 
-        <form id="algin-form" [formGroup]="userStoryForm">
+        <form  id="algin-form" [formGroup]="userStoryForm">
           <div class="form-group">
             <h4 style="color: #0081c2;">Add user story</h4>
             <label for="name">Title</label>
@@ -160,7 +161,8 @@
           </div>
 
           <div class="form-group">
-            <button type="button" id="post" class="btn " (click)="onSubmit()">Submit</button>
+            <button type="button" id="post" class="btn " (click)="onSubmit()" *ngIf="scrumMaster!=null && loggeduser['id']==scrumMaster.id || SingleProject.user_id==loggeduser['id']">Submit</button>
+            <p  *ngIf="loggeduser['id']!=scrumMaster.id && SingleProject.user_id!=loggeduser['id']" style="font-weight: bold;color:red;" >You have no access to add user story</p>
           </div>
         </form>
       </div>
