--- a/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="banner-heading">
-            <h1 class="banner-title">Edit UserStory : {{userStory.project_id}}</h1>
+            <h1 class="banner-title">Edit UserStory/{{userStory.project_id}}</h1>
           </div>
         </div><!-- Col end -->
       </div><!-- Row end -->
