--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
@@ -1,158 +1,194 @@
-
 <div id="banner-area" class="banner-area"
-style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom: 3%;">
-<div class="banner-text">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="banner-heading">
-          <h1 class="banner-title">Edit Sprint/{{sprint.name}}</h1>
-        </div>
-      </div><!-- Col end -->
-    </div><!-- Row end -->
-  </div><!-- Container end -->
-</div><!-- Banner text end -->
+  style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom: 3%;">
+  <div class="banner-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="banner-heading">
+            <h1 class="banner-title">Backlog/Sprints/Edit Sprint</h1>
+          </div>
+        </div><!-- Col end -->
+      </div><!-- Row end -->
+    </div><!-- Container end -->
+  </div><!-- Banner text end -->
 </div><!-- Banner area end -->
 <div *ngIf="loader==true">
   <div class="loader-overlay">
-      <div *ngIf="loader==true" class="loader"></div>
+    <div *ngIf="loader==true" class="loader"></div>
   </div>
 </div>
 <div class="titre">
 
-    <h1 name="1">{{sprint.name}}</h1>
+  <h1 name="1">Edit Sprint</h1>
 </div>
 
 
 <!-- Main Body -->
 <section>
-    <div class="container">
-        <div class="btn_retour mb-3">
-            <button [routerLink]='["/sprint",sprint.project_id]'><a>🢀 Back</a></button>
-          </div>
-        <div class=" ">
-            <form [formGroup]="SprintForm" >
-              <div class="row justify-content-center">
-                <div class="col-md-4 mb-4 mx-4">
-                  <label for="validationServer01">Title</label>
-                  <input  type="text" class="form-control p-3" id="validationServer01" formControlName="name" [(ngModel)]="sprint.name"
-                    placeholder="Project title">
-                </div>
-              
-              </div>
-              <div class="row justify-content-center">
-                <div class="col-md-4 mb-4 mx-4">
-                  <label for="validationServer04">Start date</label>
-                  <input   type="date" class="form-control p-1" id="validationServer04" formControlName="start_date" [ngModel]="sprint.startDate" required>
-                </div>
-                <div class="col-md-4 mb-4 mx-4">
-                  <label for="validationServer03">End date</label>
-                  <input type="date"  class="form-control p-3" formControlName="end_date" [ngModel]="sprint.endDate"
-                    placeholder="Nombre de stagaires..." required>
-                </div>
-              </div>
-            
-            
-              <div class="row justify-content-center">
-                <button class="btn  col-md-2" style="background-color: #0081c2;color:white;" type="submit" (click)="editSprint()">Save changes</button>
-              </div>
-            </form>
-          </div>
-        <div class="row">
-
-
-
-
-
-
-         
-          <div class="col-sm-5 col-md-6 col-12 " cdkDropList #todoList="cdkDropList" [cdkDropListData]="userStories" [cdkDropListConnectedTo]="[doneList]"
-          (cdkDropListDropped)="drop($event)">
-          <h2 class="my-4" style="color: #0081c2;" >Pending user stories</h2>
-         
-            <div class="comment   col-md-12 text-justify float-left mb-4" *ngFor="let story of userStories" cdkDrag>
-              <h4 style="color: #0081c2;">{{story.name}}</h4>
-              <span> | {{story.estimated_date}}</span>
-    
-              <br>
-              <p>{{story.description}}</p>
-            </div>
-            <h4 *ngIf="userStories.length==0"  style="color: gray; margin-top: 3%;margin-bottom: 3%;">
-              No pending user stories yet</h4>
+  <div class="container">
+    <div class="btn_retour mb-3">
+      <button [routerLink]='["/sprint",sprint.project_id]'><a>🢀 Back</a></button>
+    </div>
+    <div *ngIf="scrumMaster!=null && loggeduser['id']==scrumMaster.id" class=" ">
+      <form [formGroup]="SprintForm">
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4 mx-4">
+            <label for="validationServer01">Title</label>
+            <input type="text" class="form-control p-3" id="validationServer01" formControlName="name"
+              [(ngModel)]="sprint.name" placeholder="Project title">
           </div>
 
-
-
-
-
-
-          
-            <div class="col-lg-6 col-md-5 col-sm-4  col-12 ">
-              <h2 class="my-4" style="color: #0081c2;" >Sprint user stories</h2>
-
-                <div class="">
-
-                    <div class="row  ">
-                      
-                        <div class="">
-                          <div class="card card-margin" >
-                            
-                            <div class="card-header no-border">
-                            </div>
-                            <div class="card-body pt-0">
-                                <div class="widget-49">
-                                    <div class="widget-49-title-wrapper">
-                                        <div class="widget-49-date-primary">
-                                            <span class="widget-49-date-day">1</span>
-                                        </div>
-                                        <div class="widget-49-meeting-info">
-                                            <h4 >{{sprint.name}}</h4>
-                                        </div>
-                                        
-                                    </div>
-                                    <ol class="widget-49-meeting-points">
-                                      <li *ngIf="sprint.startDate" class="widget-49-meeting-item"><span>Start date: {{sprint.startDate}} </span></li>
-                                      <li *ngIf="sprint.endDate" class="widget-49-meeting-item"><span>End date: {{sprint.endDate}} </span></li>
-                                      <li *ngIf="!sprint.startDate" class="widget-49-meeting-item"><span>No start date yet</span></li>
-                                      <li *ngIf="!sprint.endDate" class="widget-49-meeting-item"><span>No end date yet </span></li>
-                                    </ol>
-                                    <div class="widget-49-meeting-action">
-                                        <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                        </div>
-
-                        
-                        </div>
-                       
-                      
-          <div class="col-sm-5 col-md-12 col-12 pb-4" cdkDropList #doneList="cdkDropList" [cdkDropListData]="affected" [cdkDropListConnectedTo]="[todoList]"
-           (cdkDropListDropped)="drop($event)">
-           <h2 class="my-4" style="color: #0081c2;" >Affected user stories</h2>
-
-           <h4 *ngIf="affected.length==0"  style="color: gray; margin-top: 3%;margin-bottom: 3%;">
-            No Affected user stories yet</h4>
-            <div class="drag-image">
-              <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
-              <h6>Drag & Drop user stories below</h6>
-            </div>
-            <div class="comment  mt-4 col-md-12 text-justify float-left" *ngFor="let story of affected" cdkDrag>
-              <h4 style="color: #0081c2;">{{story.name}}</h4>
-              <span> | {{story.estimated_date}}</span>
-    
-              <br>
-              <p>{{story.description}}</p>
-            </div>
-          
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4 mx-4">
+            <label for="validationServer04">Start date</label>
+            <input type="date" class="form-control p-1" id="validationServer04" formControlName="start_date"
+              [ngModel]="sprint.startDate" required>
           </div>
+          <div class="col-md-4 mb-4 mx-4">
+            <label for="validationServer03">End date</label>
+            <input type="date" class="form-control p-3" formControlName="end_date" [ngModel]="sprint.endDate"
+              placeholder="Nombre de stagaires..." required>
+          </div>
+        </div>
 
-                        
+
+        <div class="row justify-content-center">
+          <button class="btn  col-md-2" style="background-color: #0081c2;color:white;" type="submit"
+            (click)="editSprint()">Save changes</button>
+        </div>
+      </form>
+    </div>
+    <div class="row">
+
+
+
+
+
+
+
+      <div class="col-sm-5 col-md-6 col-12 " cdkDropList #todoList="cdkDropList" [cdkDropListData]="userStories"
+        [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="drop($event)">
+        <h2 class="my-4" style="color: #0081c2;">Pending user stories</h2>
+
+        <div class="comment   col-md-12 text-justify float-left mb-4" *ngFor="let story of userStories" cdkDrag>
+          <h4 style="color: #0081c2;">{{story.name}}</h4>
+          <span> | {{story.estimated_date}} | </span>
+          <span class="badge badge-danger " *ngIf="story.priority<3" style="color: white;">Critical</span>
+          <span class="badge badge-warning" *ngIf="story.priority>=3 && story.priority<=6"
+            style="color: white;">Medium</span>
+          <span class="badge badge-info" *ngIf="story.priority>6" style="color: white;">Easy</span>
+
+
+          <br>
+          <p>{{story.description}}</p>
+        </div>
+        <h4 *ngIf="userStories.length==0" style="color: gray; margin-top: 3%;margin-bottom: 3%;">
+          No pending user stories yet</h4>
+      </div>
+
+
+
+
+
+
+
+      <div class="col-lg-6 col-md-5 col-sm-4  col-12 ">
+        <div class="row ">
+          <h2 class="my-4" style="color: #0081c2;">Sprint user stories</h2>
+
+        </div>
+
+        <div class="">
+
+          <div class="row  ">
+
+            <div class="">
+              <div class="card card-margin">
+
+                <div class="card-header no-border">
+                  <span *ngIf="scrumMaster!=null" class="badge  badge-light col-md-auto my-2 ">
+                    <div class="row ">
+                      <img [src]="imgpath+scrumMaster.img" alt="" style="width: 30%;border-radius:100%;">
+                      <h6 style="margin-top: -15%; color: gray;">{{scrumMaster.name}}</h6>
                     </div>
+
+
+                  </span>
+                  <span *ngIf="scrumMaster==null" class="badge badge-light col-md-auto my-2 " >
+                    <h6 style="color: gray;">No scrum master yet</h6>
+
+                  </span>
+                </div>
+                <div class="card-body pt-0">
+                  <div class="widget-49">
+                    <div class="widget-49-title-wrapper">
+                      <div class="widget-49-date-primary">
+                        <span class="widget-49-date-day">1</span>
+                      </div>
+                      <div class="widget-49-meeting-info">
+                        
+                        <h4>{{sprint.name}}</h4>
+                        
+                      </div>
+
+                    </div>
+                    <ol class="widget-49-meeting-points">
+                      <li *ngIf="sprint.startDate" class="widget-49-meeting-item"><span>Start date: {{sprint.startDate}}
+                        </span></li>
+                      <li *ngIf="sprint.endDate" class="widget-49-meeting-item"><span>End date: {{sprint.endDate}}
+                        </span></li>
+                      <li *ngIf="!sprint.startDate" class="widget-49-meeting-item"><span>No start date yet</span></li>
+                      <li *ngIf="!sprint.endDate" class="widget-49-meeting-item"><span>No end date yet </span></li>
+                     
+
+                    </ol>
+                    <div class="widget-49-meeting-action col-md-auto "> 
+                     
+                    
+                      <button class="btn  ml-2 btn-flash-border-primary col-md-auto " style="background-color: #0081c2;color:white;" routerLink="/boards">Check
+                        board</button>
                     
                     </div>
+                  </div>
+                </div>
+
+              </div>
+
+
             </div>
+
+
+            <div class="col-sm-5 col-md-12 col-12 pb-4" cdkDropList #doneList="cdkDropList" [cdkDropListData]="affected"
+              [cdkDropListConnectedTo]="[todoList]" (cdkDropListDropped)="drop($event)">
+              <h2 class="my-4" style="color: #0081c2;">Affected user stories</h2>
+
+              <h4 *ngIf="affected.length==0" style="color: gray; margin-top: 3%;margin-bottom: 3%;">
+                No Affected user stories yet</h4>
+              <div class="drag-image">
+                <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+                <h6>Drag & Drop user stories below</h6>
+              </div>
+              <div class="comment  mt-4 col-md-12 text-justify float-left" *ngFor="let story of affected" cdkDrag>
+                <h4 style="color: #0081c2;">{{story.name}}</h4>
+                <span> | {{story.estimated_date}} | </span>
+                <span class="badge badge-danger " *ngIf="story.priority<3" style="color: white;">Critical</span>
+                <span class="badge badge-warning" *ngIf="story.priority>=3 && story.priority<=6"
+                  style="color: white;">Medium</span>
+                <span class="badge badge-info" *ngIf="story.priority>6" style="color: white;">Easy</span>
+
+
+                <br>
+                <p>{{story.description}}</p>
+              </div>
+
+            </div>
+
+
+          </div>
+
         </div>
+      </div>
     </div>
+  </div>
 </section>
