--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
@@ -6,7 +6,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
     <div class="row">
       <div class="col-lg-12">
         <div class="banner-heading">
-          <h1 class="banner-title">Sprints</h1>
+          <h1 class="banner-title">Backlog/Sprints</h1>
         </div>
       </div><!-- Col end -->
     </div><!-- Row end -->
@@ -16,7 +16,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
 
 <div class="titre">
 
-    <h1 name="1">project name</h1>
+    <h1 name="1">Sprints</h1>
 </div>
 
 <div *ngIf="loader==true">
@@ -54,7 +54,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                 <li *ngIf="!sprint.endDate" class="widget-49-meeting-item"><span>No end date yet </span></li>
                             </ol>
                             <div class="widget-49-meeting-action">
-                                <button class="btn btn-warning" [routerLink]='["/editsprint",sprint.id]'>edit </button>
+                                <button class="btn " [routerLink]='["/editsprint",sprint.id]' style="color: white;background-color:#0081c2;">Details </button>
                                 <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                             </div>
                         </div>
