--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -34,7 +34,8 @@
       >🢀 Back</button>
       <button [routerLink]='["/sprint",id]' class="btn mx-3  col-md-auto  "
         style="color: white;background-color:#0081c2;">Sprints</button>
-      <span *ngIf="scrumMaster!=null" class="badge  badge-dark col-md-auto ml-1"   >
+     
+        <span *ngIf="scrumMaster!=null" class="badge  badge-dark col-md-auto ml-1"   >
         <div class="row ">
           <img [src]="imgpath+scrumMaster.img" alt="" style="width: 30%;border-radius:100%;">
           <h6 style="margin-top: -15%;">{{scrumMaster.name}}</h6>
@@ -97,16 +98,18 @@
     <div class="row">
 
       <div class="col-sm-5 col-md-7 col-12 pb-4">
+        <h4 *ngIf="userStories.length==0" style="color: gray; margin-top: 3%;margin-bottom: 3%;">
+          No user stories yet</h4>
         <div class="comment  mt-4 col-md-12 text-justify float-left" *ngFor="let story of userStories">
           <button class="btn me-1" style="color: #0081c2;" [routerLink]="['/editBacklog',story.id]">
             <i class="fas fa-edit"></i>
           </button>
           <h4 style="color: #0081c2;">{{story.name}}</h4>
-          <span> | {{story.estimated_date}} | </span>
-          <span class="badge badge-danger " *ngIf="story.priority<3" style="color: white;">Critical</span>
+          <span> | {{story.hours}} Hours</span>
+          <span class="badge badge-danger " *ngIf="story.priority<3" style="color: white;float: right;">Critical</span>
           <span class="badge badge-warning" *ngIf="story.priority>=3 && story.priority<=6"
-            style="color: white;">Medium</span>
-          <span class="badge badge-info" *ngIf="story.priority>6" style="color: white;">Easy</span>
+            style="color: white;float: right;">Medium</span>
+          <span class="badge badge-info" *ngIf="story.priority>6" style="color: white;float: right;">Easy</span>
 
        
 
@@ -127,9 +130,9 @@
 
           </div>
           <div class="form-group">
-            <label for="name">Estimated date</label>
-            <input type="date" name="name" id="fullname" formControlName="estimated_date" class="form-control"
-              placeholder="date...">
+            <label for="name">Estimated hours</label>
+            <input type="number" name="name" id="fullname" formControlName="hours" class="form-control"
+              placeholder="Number of hours...">
 
           </div>
           <div class="form-group">
@@ -140,7 +143,7 @@
 
           <div class="form-group">
             <label for="name">Ressource</label>
-            <select name="" id="" class="custom-select" formControlName="ressource">
+            <select name="" id="" class="custom-select" formControlName="resource">
               <option *ngFor="let stud of students" value="{{stud.id}}">{{stud.name}}</option>
 
 
