--- a/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
@@ -47,9 +47,9 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4 mx-4">
-            <label for="name">Estimated date</label>
-            <input type="date" name="name" id="fullname" formControlName="estimated_date" class="form-control" [(ngModel)]="userStory.estimated_date"
-              placeholder="date...">
+            <label for="name">Estimated hours</label>
+            <input type="number" name="name" id="fullname" formControlName="hours" class="form-control" [(ngModel)]="userStory.hours"
+              placeholder="Number of hours...">
     
           </div>
           <div class="col-md-4 mb-4 mx-4">
