--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,5 @@
-<div class="col-md-12" *ngIf="loader==false">
-  <div class="loader20">Loading...</div>
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
 </div>
