--- a/src/app/pages/djagora-academy/all-projects/all-projects.component.html
+++ b/src/app/pages/djagora-academy/all-projects/all-projects.component.html
@@ -190,13 +190,13 @@
     </div>
     <div class="pag" *ngIf="loader==false">
         <ul class="pagination">
-            <li class="page-item mx-2" style="cursor: pointer;"><a class="page-link px-3 py-2" (click)="prevPage(prev)">
+            <li class="page-item mx-2" style="cursor: pointer;"><a class="page-link px-3 py-2" (click)="prevPage1(prev1)">
                     <span aria-hidden="true">&laquo;</span>
 
                     Previous</a></li>
 
             <li class="page-item mx-2 " style="cursor: pointer;"><a class="px-3 page-link py-2"
-                    (click)="nextPage(next)">Next <span aria-hidden="true">&raquo;</span>
+                    (click)="nextPage1(next1)">Next <span aria-hidden="true">&raquo;</span>
                 </a></li>
         </ul>
     </div>
