--- a/src/app/pages/djagora-academy/scrum/boards/boards.component.css
+++ b/src/app/pages/djagora-academy/scrum/boards/boards.component.css
@@ -1,3 +1,73 @@
+
+
+.drag-image{
+  border: 1px dashed #0081C2;
+  
+  border-radius: 5px;
+  font-weight:400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.drag-image.active{
+  border: 2px solid #0081C2;
+}
+.drag-image .icon{
+  font-size: 30px;
+  color: #0081C2;
+}
+.drag-image h6{
+  font-size: 20px;
+  font-weight: 300;
+  color: #0081C2;
+}
+.drag-image span{
+  font-size: 14px;
+  font-weight: 300;
+  color: #0081C2;
+  margin: 10px 0 15px 0;
+}
+.drag-image button{
+  padding: 10px 25px;
+  font-size: 14px; 
+  font-weight: 300;
+  border: none;
+  outline: none;
+  background:transparent;
+  color: #0081C2;
+  border:1px solid #0081C2;
+  border-radius: 5px;
+  cursor: pointer;
+  transition:all 0.5s;
+}
+
+.drag-image button:hover{
+    background-color:#fff;
+}
+
+.drag-image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .example-container {
   width: 400px;
   max-width: 100%;
@@ -416,7 +486,7 @@ margin-left: 97%;
     margin-bottom: 20px;
   }
   .page-container .page-content .content-frame .content-frame-body {
-    padding: 70px 10px 10px 10px;
+    padding: 50px 10px 10px 10px;
     margin-left: 300px;
   }
   .page-container .page-content .content-frame .content-frame-body.content-frame-body-left {
